# neuropatient-tracker-crew-ai

./: .env.example  .gitignore  CLAUDE.md  LICENSE  LOCAL_LLM_SETUP.md  QUICK_START.md  README.md  STREAMLIT_GUIDE.md  TESTING.md  app.py  architecture.html  prompt-uplifting.md  pyproject.toml  test_local_llm.py
.claude/: settings.local.json
data/: test_patients.json
docs/: README.md  agents.md  api.md  architecture-onepage.html  architecture.html  claude.md  code-review.html  index.html
src/: __init__.py  main.py  orchestrator.py
src/agents/: backend_developer.py  base_agent.py  clinical_architect.py  neurologist.py  prognosis_analyst.py  qa_validator.py  report_generator.py  treatment_advisor.py
src/config/: settings.py
src/logging/: __init__.py  audit_logger.py  telemetry.py
tests/: __init__.py  conftest.py  test_config.py  test_models.py
